# path-compat-wrapper

./: .gitignore  Makefile.am  configure.ac
src/: path-compat-mkwrap.in  path-compat-wrapper.c  path-respect-wrapper.c
